Enhance content to make it more consice.

--- a/src/career.html
+++ b/src/career.html
@@ -19,7 +19,7 @@
       <nav>
         <div class="menu-icon" onclick="toggleMenu()">Menu &#9776;</div>
         <ul>
-          <li><a href="./home.html" id="home">Home</a></li>
+          <li><a href="./index.html" id="home">Home</a></li>
           <li><a href="./career.html" id="career">Career</a></li>
           <li><a href="./projects.html" id="projects">Projects</a></li>
           <li><a href="./interests.html" id="interests">Interests</a></li>
@@ -36,8 +36,9 @@
       </div>
       <section class="intro">
         <div class="intro-text">
-          This summary highlights my key skills, the technologies I've utilized,
-          and my work experience.
+          Summary of my key skills, the technologies I've used, and my work
+          experience. For a more detailed work experience, please switch to
+          standard CV view.
         </div>
       </section>
       <section class="key-skills">
@@ -55,10 +56,11 @@
             <div class="card-skills-text">
               <div class="card-skills-header">Actuarial Services</div>
               <p>
-                I have extensive experience in all actuarial services required
-                by life insurance/takaful companies, including product pricing
-                and profit testing, reserving, embedded/appraisal value,
-                risk-based capital, and surplus/bonus distribution.
+                I have more than a decade of experience in various actuarial
+                services assignment required by life insurance/takaful
+                companies, including product pricing and profit testing,
+                reserving, embedded/appraisal value, risk-based capital, and
+                surplus/bonus distribution.
               </p>
             </div>
           </div>
@@ -74,7 +76,7 @@
             <div class="card-skills-text">
               <div class="card-skills-header">Financial Reporting</div>
               <p>
-                I have a robust background in financial reporting for both
+                I have a good background in financial reporting for both
                 internal and external stakeholders. My experience includes
                 regional exposure, requiring parallel reporting to meet Local,
                 Group, and overseas Business Unit requirements. I was also
@@ -94,10 +96,9 @@
             <div class="card-skills-text">
               <div class="card-skills-header">Prophet Modelling</div>
               <p>
-                With over a decade of practical experience in Prophet modelling,
-                my expertise includes model development, model review,
-                Asset-Liability Strategy (ALS) library, stochastic modelling,
-                Prophet API, and debugging.
+                I have practical experience in Prophet modelling, which includes
+                model development, model review, Asset-Liability Strategy (ALS)
+                library, stochastic modelling, Prophet API, and debugging.
               </p>
             </div>
           </div>
@@ -115,12 +116,11 @@
                 Internal Application Development
               </div>
               <p>
-                I have practical experience in using Python for process
-                improvement, such as automation scripting and developing
-                Python-based models as faster alternatives to Excel. I am
-                passionate about exploring other technologies and have worked on
-                various personal projects that have the potential to be
-                implemented in my professional work.
+                I have experience using Python for process improvement, such as
+                automation scripting and developing Python-based models as
+                faster alternatives to Excel. I enjoy coding and programming,
+                and have worked on various personal projects that could be
+                transferred to my professional work.
               </p>
             </div>
           </div>
