--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       <nav>
         <div class="menu-icon">Menu &#9776;</div>
         <ul>
-          <li><a href="./home.html" id="home">Home</a></li>
+          <li><a href="./index.html" id="home">Home</a></li>
           <li><a href="./career.html" id="career">Career</a></li>
           <li><a href="./projects.html" id="projects">Projects</a></li>
           <li><a href="./interests.html" id="interests">Interests</a></li>
@@ -54,7 +54,7 @@
               <img alt="GitHub" id="github-icon" />
             </a>
             <a
-              href="https://www.linkedin.com/in/ibrahim-ahmad-10690536/"
+              href="https://my.linkedin.com/in/ibrahim-ahmad-10690536"
               target="_blank"
             >
               <img alt="LinkedIn" id="linkedin-icon" />
