--- a/src/interests.html
+++ b/src/interests.html
@@ -19,7 +19,7 @@
       <nav>
         <div class="menu-icon" onclick="toggleMenu()">Menu &#9776;</div>
         <ul>
-          <li><a href="./home.html" id="home">Home</a></li>
+          <li><a href="./index.html" id="home">Home</a></li>
           <li><a href="./career.html" id="career">Career</a></li>
           <li><a href="./projects.html" id="projects">Projects</a></li>
           <li><a href="./interests.html" id="interests">Interests</a></li>
@@ -29,9 +29,10 @@
     <main>
       <section class="intro">
         <div class="intro-text">
-          I participate in long-distance swimming events and competitions and
-          have recently taken up freediving. You can view my upcoming activities
-          and browse photos of my past activities below.
+          This page will primarily feature my swimming and freediving events and
+          competitions, but it may also include anything else I find
+          interesting. You can view my upcoming activities and browse photos of
+          my past events below.
         </div>
       </section>
       <section class="upcoming-activities">
@@ -53,27 +54,38 @@
                 Competition
               </li>
             </ul>
-            <div class="card-upcoming-header">
-              Next target - to include some overseas events:
-            </div>
+            <div class="card-upcoming-header">Wishlist for future events:</div>
             <ul>
               <li>
-                May <span class="sentence-break">|</span> Kapas Marang Swimathon
+                More local swimming events
+                <span class="sentence-break">|</span> Kapas Marang Swimathon,
+                Besut OWS Challenge.
               </li>
               <li>
-                August <span class="sentence-break">|</span> Bosphorus
-                Cross-Continental Swim - Turkey
+                Overseas swimming events
+                <span class="sentence-break">|</span> Bosphorus
+                Cross-Continental (Turkey), The Da'g Dash (HK).
               </li>
               <li>
-                December <span class="sentence-break">|</span> Phuket Oceanman -
-                Thailand
+                Attempt Marathon distance
+                <span class="sentence-break">|</span> Phuket or Krabi 10km
+                Oceanman, Perhentian 10km Solo.
+              </li>
+              <li>
+                Swimming Trips
+                <span class="sentence-break">|</span> Ocean Swim Fiji, Palawan
+                Paradise Philippines.
+              </li>
+              <li>
+                Freediving <span class="sentence-break">|</span> Wave/Lap 2
+                Certification.
               </li>
             </ul>
           </div>
         </div>
       </section>
       <section class="past-activities">
-        <div class="title-text">Past Activity</div>
+        <div class="title-text">Past Activities</div>
         <div class="card-past-wrapper">
           <a
             href="interests_subpages/interests_lap1.html"
