--- a/src/projects.html
+++ b/src/projects.html
@@ -19,7 +19,7 @@
       <nav>
         <div class="menu-icon" onclick="toggleMenu()">Menu &#9776;</div>
         <ul>
-          <li><a href="./home.html" id="home">Home</a></li>
+          <li><a href="./index.html" id="home">Home</a></li>
           <li><a href="./career.html" id="career">Career</a></li>
           <li><a href="./projects.html" id="projects">Projects</a></li>
           <li><a href="./interests.html" id="interests">Interests</a></li>
@@ -30,9 +30,9 @@
       <section class="intro">
         <div class="intro-text">
           I enjoy exploring and working on coding and programming projects in my
-          free time, either for developing useful tools or for modelling and
-          analytical purposes. Here is a glimpse of some of the projects I’ve
-          been working on and what I have in mind for future exploration.
+          free time, whether it's for developing useful tools or for modeling
+          and analytical purposes. Here is a glimpse of some of the projects
+          I’ve been working on and what I have in mind for future exploration.
         </div>
       </section>
       <section class="self-learning">
@@ -46,18 +46,33 @@
             />
             <div class="card-learn-text">
               <div class="card-learn-header">
-                Associate Data Scientist in Python Career Track
+                Associate Data Scientist (Python)
+                <!-- <span class="card-learn-links">
+                  <a
+                    href="https://www.datacamp.com/completed/statement-of-accomplishment/track/3375f83124faf050a5e69042bed3c37af29ba146/"
+                    target="_blank"
+                  >
+                    <img alt="Link to personal website" id="web" />
+                  </a>
+                </span> -->
               </div>
               <p>
-                The program, provided by DataCamp, was completed in April 2023.
-                Throughout the course, I learned to use Python for Data Science,
-                tackling challenges from data manipulation to machine learning.
-                This significantly expanded my ability to analyze data beyond
-                the life insurance sector. By leveraging these new Python
-                skills, I developed tools for processing large volumes of data
-                and created faster alternatives to traditional Excel models for
-                my work.
+                This self-learning course by DataCamp has equipped me with
+                essential data science skills using Python. It covers data
+                manipulation, visualization, and machine learning through
+                hands-on projects with popular libraries like pandas, Seaborn,
+                Matplotlib, and scikit-learn. The Python skills learned from
+                this program allow me to use Python for various work assignments
+                and personal projects.
               </p>
+            </div>
+            <div class="card-projects-links">
+              <a
+                href="https://www.datacamp.com/completed/statement-of-accomplishment/track/3375f83124faf050a5e69042bed3c37af29ba146/"
+                target="_blank"
+              >
+                <img alt="Link to personal website" id="web" />
+              </a>
             </div>
           </div>
           <div class="card-learn">
@@ -69,17 +84,25 @@
             <div class="card-learn-text">
               <div class="card-learn-header">The Odin Project</div>
               <p>
-                The program, developed by The Odin Project open-source
-                community, focuses on mastering technologies such as JavaScript,
-                HTML, CSS, GitHub, React, and NodeJS. Through this experience,
-                I've gained valuable exposure to these web development tools,
-                finding them both fascinating and essential for creating
-                web-based applications. Additionally, I see their usefulness as
-                a user interface platform that complements my Python-based
-                applications. Currently, I am actively progressing through the
-                curriculum, eager to further enhance my skills and explore
-                opportunities to apply these tools in my work.
+                This self-learning course has equipped me with essential web
+                development skills for both front-end and back-end technologies,
+                including HTML, CSS, and JavaScript. I had the opportunity to
+                build interesting web-based projects throughout this course. The
+                skills learned from this program also allow me to use web
+                technologies as the user-interface platform for desktop
+                applications and my Python models.
               </p>
+            </div>
+            <div class="card-projects-links">
+              <a
+                href="https://github.com/search?q=owner%3Aibrahimcode85%20%20topic%3Aodin&type=repositories"
+                target="_blank"
+              >
+                <img alt="Link to GitHub repository" id="github-mark" />
+              </a>
+              <a href="https://www.theodinproject.com/about" target="_blank">
+                <img alt="Link to personal website" id="web" />
+              </a>
             </div>
           </div>
         </div>
@@ -98,23 +121,25 @@
                 Life Actuarial Cashflow App
               </div>
               <p>
-                I created a life insurance cashflow modeling tool using Python
-                as an alternative to Excel and Prophet software, offering the
-                flexibility to integrate it with existing Excel models. To
-                enhance the user experience, I utilized web technologies such as
-                HTML, CSS, and JavaScript as the UI framework, potentially
-                integrating the Python model through Electron.js.
+                A life insurance cashflow projection tool powered by Python can
+                be used as an alternative to Excel and Prophet software. Web
+                technologies (HTML, CSS, and JavaScript) are used as the UI
+                framework for the model and bundled as a desktop application
+                using Electron.js.
               </p>
             </div>
             <div class="card-projects-tags-wrapper">
+              <span class="tag python-tag">Python</span>
               <span class="tag html-tag">HTML</span>
               <span class="tag css-tag">CSS</span>
               <span class="tag javascript-tag">JavaScript</span>
-              <span class="tag github-tag">GitHub</span>
-              <span class="tag figma-tag">Figma</span>
+              <span class="tag electron-tag">Electron</span>
             </div>
             <div class="card-projects-links">
-              <a href="https://github.com/ibrahimcode85" target="_blank">
+              <a
+                href="https://github.com/ibrahimcode85/life_cashflow_app"
+                target="_blank"
+              >
                 <img alt="Link to GitHub repository" id="github-mark" />
               </a>
               <a
@@ -135,23 +160,24 @@
             <div class="card-projects-text">
               <div class="card-projects-header">Personal Website</div>
               <p>
-                I have developed a webpage from scratch using HTML, CSS and
-                Javascript, while utilizing Figma to draft the page design
-                before coding. This personal page allows me to share my my work
-                experience and personal interests. It provides me the
-                flexibility to personalize my content, offering a unique
-                alternative to using third-party social media sites.
+                A personal webpage built from scratch using HTML, CSS and
+                Javascript, while Figma is used to draft the page design before
+                coding. To streamline the process, Webpack is used to compile
+                assets from various directories sources into a single folder for
+                publishing.
               </p>
             </div>
             <div class="card-projects-tags-wrapper">
-              <span class="tag python-tag">Python</span>
               <span class="tag html-tag">HTML</span>
               <span class="tag css-tag">CSS</span>
               <span class="tag javascript-tag">JavaScript</span>
-              <span class="tag github-tag">GitHub</span>
+              <span class="tag webpack-tag">Webpack</span>
             </div>
             <div class="card-projects-links">
-              <a href="https://github.com/ibrahimcode85" target="_blank">
+              <a
+                href="https://github.com/ibrahimcode85/Personal_Webpage"
+                target="_blank"
+              >
                 <img alt="Link to GitHub repository" id="github-mark" />
               </a>
               <a
@@ -172,33 +198,29 @@
             <div class="card-projects-text">
               <div class="card-projects-header">To-Do Application</div>
               <p>
-                I expanded a project from The Odin Project curriculum to create
-                an app that can be used to manage personal and team tasks,
-                incorporating features such as task creation, status updates,
-                and due-date highlights. For the user interface, I utilized HTML
-                and CSS, while JavaScript modules handled the application logic,
-                including creating and deleting tasks, changing task statuses,
-                highlighting cards as due dates approached, and summarizing
-                tasks by various metrics. Additionally, I used Electron.js to
-                develop a desktop version of the app, providing a seamless and
-                accessible experience for users.
+                A classic to-do application for managing personal tasks. The UI
+                is built with HTML and CSS, while JavaScript handles the
+                application logic, including enhanced features such as due-date
+                alerts and task summaries by various metrics. I also packaged a
+                desktop version of this web application using Electron.js.
               </p>
             </div>
             <div class="card-projects-tags-wrapper">
               <span class="tag html-tag">HTML</span>
               <span class="tag css-tag">CSS</span>
               <span class="tag javascript-tag">JavaScript</span>
-              <span class="tag github-tag">GitHub</span>
+              <span class="tag webpack-tag">Webpack</span>
+              <span class="tag electron-tag">Electron</span>
             </div>
             <div class="card-projects-links">
-              <a href="https://github.com/ibrahimcode85" target="_blank">
-                <img alt="Link to GitHub repository" id="github-mark" />
-              </a>
               <a
-                href="https://www.linkedin.com/in/ibrahim-ahmad-10690536/"
+                href="https://github.com/ibrahimcode85/Odin_Project_11_ToDoList"
                 target="_blank"
               >
-                <img alt="Link to personal website" id="web" />
+                <img alt="Link to GitHub repository" id="github-mark" />
+              </a>
+              <a href="#" target="_blank">
+                <img alt="Link to insaller" id="disk" />
               </a>
             </div>
           </div>
@@ -214,11 +236,11 @@
                 Data Science Project: Predicting Insurance Charges
               </div>
               <p>
-                This is a project from DataCamp that involves using Python to
-                clean data and build a model to predict customer healthcare
-                costs. The project requires model's effectiveness to be tested
-                on data from new clients, providing an exciting opportunity to
-                see data science in action in the business world.
+                This project from DataCamp involves using Python's scikit-learn
+                library to train data and build a model to predict customer
+                healthcare costs. The project's requirements include testing the
+                model's accuracy on a new dataset, providing hands-on experience
+                in handling machine learning assignments.
               </p>
             </div>
             <div class="card-projects-tags-wrapper">
@@ -249,12 +271,10 @@
                 Data Science Project: Customer Segmentation For Medical Company
               </div>
               <p>
-                This was a past competition by DataCamp which i have used as a
-                practice and to enhance my machine learning skills. In this
-                project, I am utilizing Python to propose recommendations for
-                better segmenting customers based on the provided data. This
-                experience allows me to further honing my abilities in data
-                analysis and machine learning.
+                This past DataCamp competition served as a practice for machine
+                learning skills. In this project, I used Python to propose
+                recommendations for better segmenting customers based on the
+                provided data.
               </p>
             </div>
             <div class="card-projects-tags-wrapper">
@@ -294,18 +314,20 @@
           <div class="card-future-exploration">
             <ul>
               <li>
-                <strong>Topics</strong>
+                Topics
                 <span class="sentence-break">|</span> Python Asynchronous
-                programming, Python GPU programming, OpenAI API.
+                programming, Python GPU programming, OpenAI API, Web App cloud
+                hosting.
               </li>
               <li>
-                <strong>Development</strong>
-                <span class="sentence-break">|</span> Policyholders' profile
-                generator, using BNM's OpenAPI to create personalised dashboard.
+                Development
+                <span class="sentence-break">|</span> Profile random generator,
+                Web scrapping (e.g. use provider's API or Python's Selenium )
               </li>
               <li>
-                <strong>Tools</strong>
-                <span class="sentence-break">|</span> React, Node.js, Azure
+                Tools
+                <span class="sentence-break">|</span> React, Node.js, Azure,
+                SheetJS.
               </li>
             </ul>
           </div>
