Update link for 'predicting insurance charges' project.

--- a/src/projects.html
+++ b/src/projects.html
@@ -245,17 +245,20 @@
             </div>
             <div class="card-projects-tags-wrapper">
               <span class="tag python-tag">Python</span>
-              <span class="tag github-tag">GitHub</span>
+              <span class="tag github-tag">Jupyter Notebook</span>
             </div>
             <div class="card-projects-links">
-              <a href="https://github.com/ibrahimcode85" target="_blank">
+              <a
+                href="https://github.com/ibrahimcode85/predicting_insurance_charges"
+                target="_blank"
+              >
                 <img alt="Link to GitHub repository" id="github-mark" />
               </a>
               <a
-                href="https://www.linkedin.com/in/ibrahim-ahmad-10690536/"
+                href="https://www.datacamp.com/datalab/w/401ff409-a0ef-4187-b677-7b65b5761203/report"
                 target="_blank"
               >
-                <img alt="Link to personal website" id="web" />
+                <img alt="Link to project notebook" id="jupyter" />
               </a>
             </div>
           </div>
