Edit content wordings after some review.

--- a/src/career.html
+++ b/src/career.html
@@ -76,11 +76,12 @@
             <div class="card-skills-text">
               <div class="card-skills-header">Financial Reporting</div>
               <p>
-                I have a good background in financial reporting for both
-                internal and external stakeholders. My experience includes
-                regional exposure, requiring parallel reporting to meet Local,
-                Group, and overseas Business Unit requirements. I was also
-                heavily involved in the IFRS17 implementation project.
+                I have a solid background in financial reporting, catering to
+                both internal and external stakeholders. My experience includes
+                regional exposure from my assignment at a shared service center,
+                where I managed parallel reporting to meet the needs of local,
+                group, and overseas business units. I was also deeply involved
+                in the IFRS17 implementation project.
               </p>
             </div>
           </div>
@@ -116,11 +117,10 @@
                 Internal Application Development
               </div>
               <p>
-                I have experience using Python for process improvement, such as
-                automation scripting and developing Python-based models as
-                faster alternatives to Excel. I enjoy coding and programming,
-                and have worked on various personal projects that could be
-                transferred to my professional work.
+                I have experience using Python for process improvement and
+                developing Python-based models. I enjoy coding and programming
+                and have worked on various personal projects as a hobby, which
+                could be beneficial for my work.
               </p>
             </div>
           </div>
