--- a/src/index.html
+++ b/src/index.html
@@ -33,20 +33,19 @@
           <h1>Hi! I'm Ibrahim.</h1>
           <p>
             I'm an Actuarial Manager with 15 years of experience helping life
-            actuaries with their cash flow modeling and reporting needs. You can
-            view my professional experience
+            actuaries with their modeling and reporting needs. You can view my
+            experience
             <a href="./career.html">here</a>.
           </p>
           <p>
-            Through my professional work, I discovered a passion for programming
-            and coding. This passion has inspired me to pursue personal projects
-            in my free time to further expand my skills and interests. You can
-            explore my personal projects <a href="./projects.html">here</a>.
+            I discovered a passion for programming and coding through my work.
+            This passion has inspired me to pursue personal projects in my free
+            time. You can explore my personal projects
+            <a href="./projects.html">here</a>.
           </p>
           <p>
-            I love swimming and have recently participated in open water
-            swimming events and competitions. Check out my past and upcoming
-            activities
+            I love swimming and have participated in open water swimming events
+            and competitions. Check out my past and upcoming activities
             <a href="./interests.html">here</a>.
           </p>
           <div class="contact-links">
