--- a/src/interests.html
+++ b/src/interests.html
@@ -42,32 +42,37 @@
             <div class="card-upcoming-header">Events for this year:</div>
             <ul>
               <li>
-                September 2024 <span class="sentence-break">|</span> Perhentian
-                16km Challenge
+                28 September 2024
+                <span class="sentence-break">|</span> Perhentian 16km Challenge
+                - Team Relay
               </li>
               <li>
-                November 2024 <span class="sentence-break">|</span> AIDA
-                Freediving Pool Competition
+                09 November 2024 <span class="sentence-break">|</span> AIDA
+                Malaysia Freediving Championship
               </li>
               <li>
-                December 2024 <span class="sentence-break">|</span> PD 10km OWS
-                Competition
+                22 November 2024 <span class="sentence-break">|</span> MySwim
+                Year End Championship
+              </li>
+              <li>
+                07 December 2024 <span class="sentence-break">|</span> PD 10km
+                OWS Competition
               </li>
             </ul>
             <div class="card-upcoming-header">Wishlist for future events:</div>
             <ul>
               <li>
-                More local swimming events
+                Explore Local Events
                 <span class="sentence-break">|</span> Kapas Marang Swimathon,
                 Besut OWS Challenge.
               </li>
               <li>
-                Overseas swimming events
+                Attempt Overseas Events
                 <span class="sentence-break">|</span> Bosphorus
                 Cross-Continental (Turkey), The Da'g Dash (HK).
               </li>
               <li>
-                Attempt Marathon distance
+                Attempt Marathon Distance
                 <span class="sentence-break">|</span> Phuket or Krabi 10km
                 Oceanman, Perhentian 10km Solo.
               </li>
@@ -77,8 +82,8 @@
                 Paradise Philippines.
               </li>
               <li>
-                Freediving <span class="sentence-break">|</span> Wave/Lap 2
-                Certification.
+                Advancement in Freediving<span class="sentence-break">|</span>
+                Wave/Lap 2 Certification.
               </li>
             </ul>
           </div>
