--- a/src/projects.html
+++ b/src/projects.html
@@ -29,10 +29,10 @@
     <main>
       <section class="intro">
         <div class="intro-text">
-          I enjoy exploring and working on coding and programming projects in my
-          free time, whether it's for developing useful tools or for modeling
-          and analytical purposes. Here is a glimpse of some of the projects
-          I’ve been working on and what I have in mind for future exploration.
+          I love exploring and working on coding and programming projects in my
+          free time, whether it's developing useful tools or for modeling and
+          analytical purposes. Here's a glimpse of some projects I've been
+          working on and what I have in mind for future exploration.
         </div>
       </section>
       <section class="self-learning">
@@ -47,14 +47,6 @@
             <div class="card-learn-text">
               <div class="card-learn-header">
                 Associate Data Scientist (Python)
-                <!-- <span class="card-learn-links">
-                  <a
-                    href="https://www.datacamp.com/completed/statement-of-accomplishment/track/3375f83124faf050a5e69042bed3c37af29ba146/"
-                    target="_blank"
-                  >
-                    <img alt="Link to personal website" id="web" />
-                  </a>
-                </span> -->
               </div>
               <p>
                 This self-learning course by DataCamp has equipped me with
@@ -143,10 +135,10 @@
                 <img alt="Link to GitHub repository" id="github-mark" />
               </a>
               <a
-                href="https://www.linkedin.com/in/ibrahim-ahmad-10690536/"
+                href="https://github.com/ibrahimcode85/life_cashflow_app/releases/download/v1.0.0-beta/life_cashflow_app-win32-x64-1.0.0.zip"
                 target="_blank"
               >
-                <img alt="Link to personal website" id="web" />
+                <img alt="Link to installer" id="disk" />
               </a>
             </div>
           </div>
@@ -180,11 +172,8 @@
               >
                 <img alt="Link to GitHub repository" id="github-mark" />
               </a>
-              <a
-                href="https://www.linkedin.com/in/ibrahim-ahmad-10690536/"
-                target="_blank"
-              >
-                <img alt="Link to personal website" id="web" />
+              <a href="https://www.ibrahim-ahmad.com" target="_blank">
+                <img alt="Link to website" id="web" />
               </a>
             </div>
           </div>
@@ -214,13 +203,16 @@
             </div>
             <div class="card-projects-links">
               <a
-                href="https://github.com/ibrahimcode85/Odin_Project_11_ToDoList"
+                href="https://github.com/ibrahimcode85/todo_app"
                 target="_blank"
               >
                 <img alt="Link to GitHub repository" id="github-mark" />
               </a>
-              <a href="#" target="_blank">
-                <img alt="Link to insaller" id="disk" />
+              <a
+                href="https://github.com/ibrahimcode85/todo_app/releases/download/v1.0.0/todo_app-win32-x64.zip"
+                target="_blank"
+              >
+                <img alt="Link to installer" id="disk" />
               </a>
             </div>
           </div>
@@ -255,7 +247,7 @@
                 <img alt="Link to GitHub repository" id="github-mark" />
               </a>
               <a
-                href="https://www.datacamp.com/datalab/w/401ff409-a0ef-4187-b677-7b65b5761203/report"
+                href="https://www.datacamp.com/datalab/w/401ff409-a0ef-4187-b677-7b65b5761203/report/notebook_v2.ipynb"
                 target="_blank"
               >
                 <img alt="Link to project notebook" id="jupyter" />
@@ -271,7 +263,7 @@
 
             <div class="card-projects-text">
               <div class="card-projects-header">
-                Data Science Project: Customer Segmentation For Medical Company
+                Data Science Project: Customer Segmentation For Medical Supplier
               </div>
               <p>
                 This past DataCamp competition served as a practice for machine
@@ -285,14 +277,17 @@
               <span class="tag github-tag">GitHub</span>
             </div>
             <div class="card-projects-links">
-              <a href="https://github.com/ibrahimcode85" target="_blank">
+              <a
+                href="https://github.com/ibrahimcode85/improving_customer_segmentation"
+                target="_blank"
+              >
                 <img alt="Link to GitHub repository" id="github-mark" />
               </a>
               <a
-                href="https://www.linkedin.com/in/ibrahim-ahmad-10690536/"
+                href="https://www.datacamp.com/datalab/w/6a240b08-b076-4f36-99f5-65efb4570da7"
                 target="_blank"
               >
-                <img alt="Link to personal website" id="web" />
+                <img alt="Link to project notebook" id="jupyter" />
               </a>
             </div>
           </div>
