Add new interest sub page for 100 hours strength training milestone.

--- a/src/interests.html
+++ b/src/interests.html
@@ -93,6 +93,25 @@
         <div class="title-text">Past Activities</div>
         <div class="card-past-wrapper">
           <a
+            href="interests_subpages/interests_oneHundredHoursPT.html"
+            class="card-past-link"
+          >
+            <div class="card-past">
+              <img
+                id="IMG_3920_jpg"
+                alt="Logo of my gym - Fitness First at The Gardens Mall."
+                class="card-past-img"
+                loading="lazy"
+              />
+              <div class="card-past-text">
+                <div class="date">August 2024</div>
+                <div class="card-past-header">
+                  100 Hours of Strength Training
+                </div>
+              </div>
+            </div>
+          </a>
+          <a
             href="interests_subpages/interests_lap1.html"
             class="card-past-link"
           >
