Update js files and webpack for Perhentian swim

--- a/src/interests.html
+++ b/src/interests.html
@@ -42,17 +42,8 @@
             <div class="card-upcoming-header">Events for this year:</div>
             <ul>
               <li>
-                28 September 2024
-                <span class="sentence-break">|</span> Perhentian 16km Challenge
-                - Team Relay
-              </li>
-              <li>
                 09 November 2024 <span class="sentence-break">|</span> AIDA
                 Malaysia Freediving Championship
-              </li>
-              <li>
-                22 November 2024 <span class="sentence-break">|</span> MySwim
-                Year End Championship
               </li>
               <li>
                 07 December 2024 <span class="sentence-break">|</span> PD 10km
@@ -92,6 +83,23 @@
       <section class="past-activities">
         <div class="title-text">Past Activities</div>
         <div class="card-past-wrapper">
+          <a
+            href="interests_subpages/interests_perhentianChallenge.html"
+            class="card-past-link"
+          >
+            <div class="card-past">
+              <img
+                id="b5a1553d-d74f-4369-9361-3661611e4412"
+                alt="Team picture after completing the swim."
+                class="card-past-img"
+                loading="lazy"
+              />
+              <div class="card-past-text">
+                <div class="date">September 2024</div>
+                <div class="card-past-header">Perhentian Island Challenge</div>
+              </div>
+            </div>
+          </a>
           <a
             href="interests_subpages/interests_oneHundredHoursPT.html"
             class="card-past-link"
