Run build for perhentian challenge swim.

--- a/src/interests_subpages/interests_perhentianChallenge.html
+++ b/src/interests_subpages/interests_perhentianChallenge.html
@@ -50,16 +50,14 @@
               </div>
             </div>
             <div class="img-wrapper">
-              <iframe src="https://www.youtube.com/watch?v=AqhMGSt5vjE">
-              </iframe>
+              <iframe src="https://www.youtube.com/embed/AqhMGSt5vjE"> </iframe>
               <div class="img-text">
                 Some snapshots of me in action, cruising the stunning waters of
                 Perhentian.
               </div>
             </div>
             <div class="img-wrapper">
-              <iframe src="https://www.youtube.com/watch?v=nsBNVCjx7kI">
-              </iframe>
+              <iframe src="https://www.youtube.com/embed/nsBNVCjx7kI"> </iframe>
               <div class="img-text">
                 That exhilarating moment of running together towards the finish
                 line.
